Found some bugs, squashed, but a few still remain -.-

--- a/develop/style.css
+++ b/develop/style.css
@@ -10,8 +10,5 @@ h1 {
 #box {
     width: 100px;
     height: 100px;
-    position: absolute;
-    top: 200px;
-    left: 10px;
     background: white;
 }
